<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_movie"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/movie"/>

    <item
            android:id="@+id/navigation_tv_show"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/tv_show"/>

    <item
            android:id="@+id/navigation_favorite"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/favorite"
    />
</menu>
