<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/favorite_menu"
            android:icon="@drawable/ic_star_border_24dp"
            android:orderInCategory="100"
            app:showAsAction="always"
            android:title="@string/favorite" />
</menu>